# GPUI-Framework-Guide

./: .gitignore  Cargo.toml  GPUI_GUIDE.md  LICENSE  README.md  build_install_linux_bsd.sh  grammar.ebnf  grammar.peg  grammar_notes.md
.github/workflows/: release.yml
crates/clock/: Cargo.toml
crates/collections/: Cargo.toml
crates/derive_refineable/: Cargo.toml
crates/gpui/: Cargo.toml
crates/gpui/src/: gpui.rs  platform.rs  text_system.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_macos/: Cargo.toml
crates/gpui_macros/: Cargo.toml
crates/gpui_platform/: Cargo.toml
crates/gpui_util/: Cargo.toml
crates/gpui_web/: Cargo.toml
crates/gpui_wgpu/: Cargo.toml
crates/gpui_wgpu/src/: cosmic_text_system.rs
crates/gpui_windows/: Cargo.toml
crates/http_client/: Cargo.toml
crates/media/: Cargo.toml
crates/numnum-core/: Cargo.toml
crates/numnum-core/src/: config.rs  evaluator.rs  format.rs  lexer.rs  lib.rs  parser.rs  types.rs
crates/perf/: Cargo.toml
crates/rope/: Cargo.toml
crates/scheduler/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/tree-sitter-numnum/: grammar.js  package.json  tree-sitter.json
crates/tree-sitter-numnum/bindings/rust/: Cargo.toml  build.rs
crates/tree-sitter-numnum/bindings/rust/src/: lib.rs
crates/tree-sitter-numnum/queries/: highlights.scm
crates/tree-sitter-numnum/src/: grammar.json  node-types.json  parser.c
crates/util/: Cargo.toml
crates/util_macros/: Cargo.toml
crates/zlog/: Cargo.toml
crates/ztracing/: Cargo.toml
data/: currencies.txt  units.txt
packaging/: README.md  numnum.desktop
packaging/aur/: PKGBUILD
packaging/freebsd/: MANIFEST.ucl.in  build-pkg.sh  pkg-plist
packaging/linux/: build-deb-rpm.sh
packaging/macos/: Info.plist  build-app.sh
packaging/windows/: numnum.nsi
src/: app.rs  assets.rs  editor.rs  main.rs  rates.rs  results_pane.rs  session.rs  settings_pane.rs  status_bar.rs  theme.rs
themes/: rose-pine-dawn.toml  rose-pine-moon.toml  tokyo-night-day.toml  tokyo-night.toml  zed-one-dark.toml  zed-one-light.toml
