[workspace]
resolver = "2"
members = [
    ".",
    "crates/clock",
    "crates/collections",
    "crates/derive_refineable",
    "crates/gpui",
    "crates/gpui_linux",
    "crates/gpui_macos",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_util",
    "crates/gpui_web",
    "crates/gpui_wgpu",
    "crates/gpui_windows",
    "crates/http_client",
    "crates/media",
    "crates/perf",
    "crates/refineable",
    "crates/rope",
    "crates/scheduler",
    "crates/sum_tree",
    "crates/util",
    "crates/util_macros",
    "crates/zlog",
    "crates/ztracing",
    "crates/ztracing_macro",
    "crates/numnum-core",
    "crates/tree-sitter-numnum/bindings/rust",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[package]
name = "numnum"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { path = "crates/gpui", default-features = false, features = ["font-kit"] }
gpui_platform = { path = "crates/gpui_platform", default-features = false, features = ["font-kit"] }
numnum-core = { path = "crates/numnum-core" }
tree-sitter-numnum = { path = "crates/tree-sitter-numnum/bindings/rust" }
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
unicode-segmentation = "1.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
ureq = "3"

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop" }
