[workspace]
resolver = "2"
members = [
    ".",
    "crates/clock",
    "crates/collections",
    "crates/derive_refineable",
    "crates/gpui",
    "crates/gpui_linux",
    "crates/gpui_macos",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_util",
    "crates/gpui_web",
    "crates/gpui_wgpu",
    "crates/gpui_windows",
    "crates/http_client",
    "crates/media",
    "crates/perf",
    "crates/refineable",
    "crates/rope",
    "crates/scheduler",
    "crates/sum_tree",
    "crates/util",
    "crates/util_macros",
    "crates/zlog",
    "crates/ztracing",
    "crates/ztracing_macro",
    "crates/numnum-core",
    "crates/tree-sitter-numnum/bindings/rust",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# cargo-dist / `dist` configuration. Run `dist init` once to populate
# `dist-version` and generate `.github/workflows/release.yml`; see dist/README.md.
[workspace.metadata.dist]
ci = "github"
installers = ["shell", "powershell", "homebrew", "msi"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
install-updater = false

[package]
name = "numnum"
version = "0.2.2"
edition = "2024"
description = "A text editor that does math - units, currencies and percentages in plain language."
authors = ["Rudrabhoj Bhati <hello@rudrabhoj.com>"]
license = "GPL-2.0-only"
repository = "https://github.com/rudrabhoj/numnum"
homepage = "https://github.com/rudrabhoj/numnum"
readme = "README.md"
keywords = ["calculator", "math", "units", "currency"]
categories = ["mathematics"]

[dependencies]
gpui = { path = "crates/gpui", default-features = false, features = ["font-kit"] }
gpui_platform = { path = "crates/gpui_platform", default-features = false, features = ["font-kit"] }
numnum-core = { path = "crates/numnum-core" }
tree-sitter-numnum = { path = "crates/tree-sitter-numnum/bindings/rust" }
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
unicode-segmentation = "1.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
ureq = "3"

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop" }

# Debian package (.deb) layout for `cargo deb`. Runtime dependencies are
# resolved automatically from the binary via dpkg-shlibdeps.
[package.metadata.deb]
maintainer = "Rudrabhoj Bhati <hello@rudrabhoj.com>"
copyright = "2026, Rudrabhoj Bhati"
license-file = ["LICENSE", "0"]
extended-description = """\
NumNum is a notebook-style calculator. Type expressions in plain language \
- units, currencies and percentages - and results appear as you type, \
lined up with what you wrote."""
section = "math"
priority = "optional"
assets = [
    ["target/release/numnum", "usr/bin/", "755"],
    ["packaging/numnum.desktop", "usr/share/applications/", "644"],
    ["assets/icons/numnum.svg", "usr/share/icons/hicolor/scalable/apps/numnum.svg", "644"],
    ["README.md", "usr/share/doc/numnum/README.md", "644"],
]

# RPM package (.rpm) layout for `cargo generate-rpm`. Dependencies are
# resolved automatically from the binary's ELF needs.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/numnum", dest = "/usr/bin/numnum", mode = "755" },
    { source = "packaging/numnum.desktop", dest = "/usr/share/applications/numnum.desktop", mode = "644" },
    { source = "assets/icons/numnum.svg", dest = "/usr/share/icons/hicolor/scalable/apps/numnum.svg", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/numnum/README.md", mode = "644", doc = true },
]
