[package]
name = "media"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Bindings to macos media handling APIs for Zed"

[lib]
path = "src/media.rs"
doctest = false

[dependencies]
anyhow = "1.0.86"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "=0.10.0"
ctor = "0.4.0"
foreign-types = "0.5"
metal = "0.33"
core-video = { version = "0.5.2", features = ["metal"] }
objc = "0.2"

[build-dependencies]
bindgen = "0.71"
