[package]
name = "sum_tree"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "A sum tree data structure, a concurrency-friendly B-tree"

[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
heapless = "0.9.2"
rayon = "1.8"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
ztracing = { path = "../ztracing" }
tracing = "0.1.40"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"], optional = true }

[dev-dependencies]
ctor = "0.4.0"
rand = "0.9"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
zlog = { path = "../zlog" }


[package.metadata.cargo-machete]
ignored = ["tracing"]

[features]
test-support = ["proptest"]