[package]
name = "util"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "A collection of utility structs and functions used by Zed and GPUI"


[lib]
path = "src/util.rs"
doctest = true

[features]
test-support = ["git2", "rand", "util_macros"]

[dependencies]
anyhow = "1.0.86"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
collections = { path = "../collections" }
dunce = "1.0"
futures-lite = "1.13"
futures = "0.3"
globset = "0.4"
itertools = "0.14.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
rand = { version = "0.9", optional = true }
regex = "1.5"
rust-embed = { version = "8.11", features = ["include-exclude"] }
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_json_lenient = { version = "0.2", features = [ "preserve_order", "raw_value", ] }
shlex = "1.3.0"
take-until = "0.2.0"
tempfile = "3.20.0"
unicase = "2.6"
url = "2.2"
percent-encoding = "2.3.2"
util_macros = { path = "../util_macros", optional = true }
gpui_util = { path = "../gpui_util" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
smol = "2.0"
which = "6.0.0"
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"], optional = true }
async-fs = "2.1"
walkdir = "2.5"
dirs = "4.0"

[target.'cfg(unix)'.dependencies]
command-fds = "0.3.1"
libc = "0.2"
nix = { version = "0.29", features = ["user"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.5"

[target.'cfg(windows)'.dependencies]
tendril = "0.4.3"

[dev-dependencies]
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
rand = "0.9"
util_macros = { path = "../util_macros" }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
