[package]
name = "util_macros"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Utility macros for Zed"

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.9"
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
perf = { path = "../perf" }

[features]
perf-enabled = []
